feat: adds new project list

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Petros Chantzopoulos - Portfolio" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.svg" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Petros Chantzopoulos - Portfolio</title>
+    <title>Petros Chantzopoulos</title>
   </head>
   <body>
     <div id="root"></div>
